[package]
name = "payload-dumper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
byte-unit = "5.1.4"
bzip2 = "0.4.4"
fmt = "0.1.0"
prost = "0.13.3"
prost-types = "0.13.3"
protobuf = "3.7.1"
sha2 = "0.10.8"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
crate-type = ["cdylib"]

